[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "blue_firmament"
version = "0.1.0"
description = "A python backend framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Lan_zhijiang", email = "lanzhijiang@foxmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0 License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.optional-dependencies]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "esbonio>=0.12.0",
]

[tool.poetry]

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = "^2.10.1"
uvicorn = "^0.34.0"
structlog = "^25.2.0"
postgrest = "^0.19"
setuptools = "^78.1.0"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.group.poetry.dev-dependencies]
poetry = "^2.1.1"


