[project]
name = "blue_firmament"
version = "0.1.2"
description = "A python backend framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
    {name = "Lan_zhijiang", email = "lanzhijiang@foxmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["pyjwt (>=2.10.1,<3.0.0)", "structlog (>=25.3.0,<26.0.0)", "postgrest (>=1.0.1,<2.0.0)", "uvicorn (>=0.34.2,<0.35.0)", "setuptools (>=80.3.1,<81.0.0)", "nest-asyncio (>=1.6.0,<2.0.0)", "gotrue (>=2.12.0,<3.0.0)", "pytest (>=8.3.5,<9.0.0)", "black (>=25.1.0,<26.0.0)"]

[tool.group.poetry.dev-dependencies]
poetry = "^2.1.1"

[project.optional-dependencies]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "esbonio>=0.12.0",
    "doc8>=1.1.2",
]
common = [
    "supabase-auth>=2.12.0,<3.0.0",
    "redis>=6.2.0,<7.0.0",
]

[tool.poetry]

[tool.poetry.dependencies]
python = "^3.12"

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
